--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     container_name: chat_frontend
     ports:
       - "3000:3000"
+    restart: always
     networks:
       - chat_network
 
